--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,6 +1,6 @@
 development:
   adapter: redis
-  url: redis://localhost:6379/0
+  url: <%= "#{ENV['REDIS_URL']}/0" %>
   channel_prefix: muber_development
 
 test:
@@ -8,5 +8,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/0" } %>
+  url: <%= "#{ENV['REDIS_URL']}/0" %>
   channel_prefix: muber_production
