--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -8,7 +8,7 @@
 :scheduler:
   :schedule:
     auto_match:
-      cron: '0 0-10 * * * *'
+      cron: '0 */1 * * * *'
       class: AutoMatchJob
     disconnect:
       cron: '0 11 * * * *'
