--- a/config/solid_queue.yml
+++ b/config/solid_queue.yml
@@ -1,18 +1,20 @@
-#default: &default
-#   dispatchers:
-#     - polling_interval: 1
-#       batch_size: 500
-#   workers:
-#     - queues: "*"
-#       threads: 5
-#       processes: 1
-#       polling_interval: 0.1
-#
-# development:
-#  <<: *default
-#
-# test:
-#  <<: *default
-#
-# production:
-#  <<: *default
+default: &default
+  dispatchers:
+    - polling_interval: 30
+      queues: [default]
+      batch_size: 2
+      concurrency_maintenance: false
+  workers:
+    - queues: [default]
+      threads: 1
+      processes: 1
+      polling_interval: 30
+
+development:
+ <<: *default
+
+test:
+ <<: *default
+
+production:
+ <<: *default
